# gnssvod

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: geodesy.rst  gnssvod.rst  io.rst
docs/source/examples/: 01_demo_processing.ipynb  02_demo_gathering.ipynb  03_demo_hemispheric_plotting.ipynb  04_demo_gnss_vod.ipynb
docs/source/examples/data_RINEX2.11/Dav1_Grnd/nc/: Reach_Dav1_Grnd-raw_202104282106.nc  Reach_Dav1_Grnd-raw_202104282206.nc  Reach_Dav1_Grnd-raw_202104282306.nc  Reach_Dav1_Grnd-raw_202104290006.nc  Reach_Dav1_Grnd-raw_202104290106.nc  Reach_Dav1_Grnd-raw_202104290206.nc
docs/source/examples/data_RINEX2.11/Dav2_Twr/nc/: Reach_Dav2_Twr-raw_202104282106.nc  Reach_Dav2_Twr-raw_202104282206.nc  Reach_Dav2_Twr-raw_202104282306.nc  Reach_Dav2_Twr-raw_202104290006.nc  Reach_Dav2_Twr-raw_202104290106.nc  Reach_Dav2_Twr-raw_202104290206.nc
docs/source/examples/data_RINEX2.11/Dav_paired/: Dav_20210428000000_20210429000000.nc  Dav_20210429000000_20210430000000.nc
docs/source/examples/data_RINEX2.11/MtB_Twr/rinex/: SEPT101a.25o  SEPT101b.25o  SEPT101c.25o  SEPT101d.25o  SEPT101e.25o
gnssvod/: __init__.py
gnssvod/analysis/: vod_calc.py
gnssvod/funcs/: filename.py
gnssvod/geodesy/: __init__.py  coordinate.py
gnssvod/hemistats/: hemistats.py
gnssvod/io/: __init__.py  io.py  preprocess.py  preprocessing.py  readFile.py
gnssvod/position/: interpolation.py  satellite.py
test/: test_interpolation.py  test_preprocess.py  test_vod_calc.py
